---
title: "Issuer reference data model - overview (keys only)"
---
erDiagram
    classification_scheme ||..o{ issuer_classification : "scheme"
    entity_identifier_scheme ||..o{ entity_identifier : "scheme"
    entity_registration_status ||..o{ legal_entity_version : "registration_status"
    entity_relationship_type ||..o{ entity_relationship : "relationship_type"
    entity_service_role ||..o{ entity_service_provider : "service_role"
    governing_framework ||..o{ issuer_status_code : "governing_framework"
    instrument ||--o{ instrument_issuer : "instrument_id"
    instrument_party_role ||..o{ instrument_issuer : "party_role"
    issuer ||--o{ instrument_issuer : "issuer_id"
    issuer ||--o{ issuer_classification : "issuer_id"
    issuer ||--o{ issuer_status : "issuer_id"
    issuer ||--o{ issuer_version : "issuer_id"
    issuer ||--o{ nominated_exchange_contact : "issuer_id"
    issuer_status_code ||..o{ issuer_status : "governing_framework, status_code"
    legal_entity ||--o{ entity_address : "entity_id"
    legal_entity ||--o{ entity_identifier : "entity_id"
    legal_entity ||--o{ entity_name : "entity_id"
    legal_entity ||--o{ entity_relationship : "child_entity_id"
    legal_entity ||--o{ entity_relationship : "parent_entity_id"
    legal_entity ||--o{ entity_service_provider : "client_entity_id"
    legal_entity ||--o{ entity_service_provider : "provider_entity_id"
    legal_entity ||--o| issuer : "entity_id"
    legal_entity ||--o{ legal_entity_version : "entity_id"
    legal_entity ||--o{ officer_appointment : "entity_id"
    legal_form |o..o{ legal_entity_version : "legal_form_code"
    listing_category |o..o{ issuer_status : "listing_category"
    obligation_ref |o..o{ issuer_status : "authority_ref_id"
    officer_role_type ||..o{ officer_appointment : "role_type"
    person ||--o{ nominated_exchange_contact : "person_id"
    person ||--o{ officer_appointment : "person_id"
    entity_address {
        uuid address_id PK
        uuid entity_id FK
    }
    entity_identifier {
        uuid identifier_id PK
        uuid entity_id FK
        text scheme FK
    }
    entity_name {
        uuid entity_name_id PK
        uuid entity_id FK
    }
    entity_relationship {
        uuid relationship_id PK
        uuid child_entity_id FK
        uuid parent_entity_id FK
        text relationship_type FK
    }
    entity_service_provider {
        uuid service_id PK
        uuid client_entity_id FK
        uuid provider_entity_id FK
        text service_role FK
    }
    legal_entity {
        uuid entity_id PK
    }
    legal_entity_version {
        uuid entity_version_id PK
        uuid entity_id FK
        text legal_form_code FK
        text registration_status FK
    }
    officer_appointment {
        uuid appointment_id PK
        uuid entity_id FK
        uuid person_id FK
        text role_type FK
    }
    person {
        uuid person_id PK
    }
    instrument_issuer {
        uuid instrument_issuer_id PK
        uuid instrument_id FK
        uuid issuer_id FK
        text party_role FK
    }
    issuer {
        uuid issuer_id PK
        uuid entity_id FK, UK
    }
    issuer_classification {
        uuid classification_id PK
        uuid issuer_id FK
        text scheme FK
    }
    issuer_status {
        uuid issuer_status_id PK
        uuid issuer_id FK
        text governing_framework FK
        text status_code FK
        text listing_category FK
        uuid authority_ref_id FK
    }
    issuer_version {
        uuid issuer_version_id PK
        uuid issuer_id FK
    }
    nominated_exchange_contact {
        uuid contact_id PK
        uuid issuer_id FK
        uuid person_id FK
    }
    entity_identifier_scheme {
        text scheme PK
    }
    legal_form {
        text legal_form_code PK
    }
    entity_registration_status {
        text status_code PK
    }
    entity_relationship_type {
        text relationship_type PK
    }
    entity_service_role {
        text service_role PK
    }
    officer_role_type {
        text role_type PK
    }
    classification_scheme {
        text scheme PK
    }
    listing_category {
        text listing_category PK
    }
    instrument_party_role {
        text party_role PK
    }
    issuer_status_code {
        text governing_framework PK, FK
        text status_code PK
    }
    instrument {
        uuid instrument_id PK
    }
    governing_framework {
        text governing_framework PK
    }
    obligation_ref {
        uuid obligation_ref_id PK
    }
